--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build with Next.js
         run: npm run build
+        env:
+          NEXT_PUBLIC_SILENTFORMS_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_SILENTFORMS_ACCESS_KEY }}
 
       - name: Copy CNAME to output
         run: cp CNAME out/CNAME
